tests/errors/CircularDependence.wys
void a(int i):
    if (i > 0):
        b(i-1)

void b(int i):
    if (i > 0):
        a(i-1)

void main():
    a(10)

